Fix issue ID alignment in list

--- a/src/sass/mixins/_issues.scss
+++ b/src/sass/mixins/_issues.scss
@@ -38,6 +38,7 @@
   .parent > a#{$parent} {
     background-color: $background;
     color: $color;
+    text-align: left;
 
     &:hover {
       @if color.channel($background, 'hue', $space: hsl) > 15deg and color.channel($background, 'hue', $space: hsl) < 40deg {
